--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server:dev": "nodemon",
     "dev": "concurrently \"npm run client:dev\" \"npm run server:dev\"",
     "start": "node api/index.js",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run build",
+    "postinstall": "tsc --version"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.1",
@@ -39,6 +40,7 @@
     "recharts": "^3.3.0",
     "sonner": "^1.3.0",
     "tailwind-merge": "^3.0.2",
+    "typescript": "~5.8.3",
     "xml2js": "^0.6.2",
     "zustand": "^5.0.3"
   },
@@ -65,7 +67,6 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
-    "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
     "vite-plugin-trae-solo-badge": "^1.0.0",
