--- a/package.json
+++ b/package.json
@@ -42,18 +42,18 @@
     "tailwind-merge": "^3.0.2",
     "typescript": "~5.8.3",
     "xml2js": "^0.6.2",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
+    "zustand": "^5.0.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^22.15.30",
+    "@types/xml2js": "^0.4.14"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.25.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/xml2js": "^0.4.14",
     "@vercel/node": "^5.3.6",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
