Fix Vercel build: remove api/src/ from .vercelignore to allow TypeScript compilation

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,2 +1,2 @@
-# Exclude API source files from being treated as serverless functions
-api/src/
+# Note: We need api/src/ files for TypeScript compilation
+# Only api/index.ts should be treated as a serverless function
