--- a/package.json
+++ b/package.json
@@ -20,6 +20,17 @@
     "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.17.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^22.15.30",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/xml2js": "^0.4.14",
+    "@vercel/node": "^5.3.6",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
@@ -32,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "openai": "^4.67.3",
+    "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -40,24 +52,12 @@
     "recharts": "^3.3.0",
     "sonner": "^1.3.0",
     "tailwind-merge": "^3.0.2",
-    "typescript": "~5.8.3",
-    "xml2js": "^0.6.2",
-    "zustand": "^5.0.3",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^22.15.30",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/xml2js": "^0.4.14",
-    "@vercel/node": "^5.3.6",
-    "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "typescript": "~5.8.3",
     "vite": "^6.3.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "xml2js": "^0.6.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -68,6 +68,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "terser": "^5.44.0",
     "tsx": "^4.20.3",
     "typescript-eslint": "^8.30.1",
     "vite-plugin-trae-solo-badge": "^1.0.0"
